--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Tab Watch Later to Obsidian",
+  "name": "TabVault",
   "description": "Automatically closes stale tabs and logs them into a Watch Later markdown file in your Obsidian vault.",
   "version": "0.1.0",
   "permissions": [
@@ -18,6 +18,6 @@
   },
   "options_page": "options.html",
   "action": {
-    "default_title": "Tab Watch Later"
+    "default_title": "TabVault"
   }
 }
